fix dark mode for resume

--- a/src/components/pages/Resume/Resume.module.css
+++ b/src/components/pages/Resume/Resume.module.css
@@ -12,7 +12,7 @@
   width: 950px;
   padding: 48px 92px;
   margin: 0 auto;
-  background: white;
+  background: #ffffff;
   box-shadow: 5px 10px 30px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
